ocp/dc.yaml
apiVersion: apps.openshift.io/v1
kind: DeploymentConfig
metadata:
  labels:
    app: todo-api
  name: todo-api
spec:
  replicas: 1
  revisionHistoryLimit: 10
  selector:
    app: todo-api
    deploymentconfig: todo-api
  strategy:
    activeDeadlineSeconds: 21600
    resources: {}
    rollingParams:
      intervalSeconds: 1
      maxSurge: 25%
      maxUnavailable: 25%
      timeoutSeconds: 600
      updatePeriodSeconds: 1
    type: Rolling
  template:
    metadata:
      annotations:
        openshift.io/generated-by: OpenShiftNewApp
      creationTimestamp: null
      labels:
        app: todo-api
        deploymentconfig: todo-api
    spec:
      containers:
      - image: docker-registry.default.svc:5000/netcore-s2i-poc/todo-api@sha256:050908ac81f73e7bf31db2ed2a1d546303318236d06597f3db0df922276c2e08
        imagePullPolicy: Always
        name: todo-api
        ports:
        - containerPort: 8080
          protocol: TCP
        resources: {}
        terminationMessagePath: /dev/termination-log
        terminationMessagePolicy: File
      dnsPolicy: ClusterFirst
      restartPolicy: Always
      schedulerName: default-scheduler
      securityContext: {}
      terminationGracePeriodSeconds: 30
  test: false
  triggers:
  - type: ConfigChange
  - imageChangeParams:
      automatic: true
      containerNames:
      - todo-api
      from:
        kind: ImageStreamTag
        name: todo-api:latest
        namespace: netcore-s2i-poc
    type: ImageChange
