ocp/svc.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: todo-api
  name: todo-api
spec:
  ports:
  - name: 8080-tcp
    port: 8080
    protocol: TCP
    targetPort: 8080
  selector:
    app: todo-api
    deploymentconfig: todo-api
  sessionAffinity: None
  type: ClusterIP
