ocp/route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  labels:
    app: todo-api
  name: todo-api
spec:
  host: todo-api-netcore-s2i-poc.apps.detrandf.lab.rdu2.cee.redhat.com
  port:
    targetPort: 8080-tcp
  to:
    kind: Service
    name: todo-api
    weight: 100
  wildcardPolicy: None
